tc_editor initialized

--- a/app/temp.html
+++ b/app/temp.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div id='module'>
-		<form action="">
+		<form action="">选择业务模块:
 		<select name="modules">
 			<option value="0">融资融券交易</option>
 			<option value="1">融资融券管理</option>
@@ -14,20 +14,19 @@
 	</div>
 	<br>
 	<div id='template'>
-		<form action="">
+		<form action="">选择模板:
 		<select name="templates">
 			<option value="0">柜台</option>
 			<option value="1">testapp</option>
 		</select>
 	</div>
 	<br>
-	<div id='pkg'>
-		<p></p>
-	</div>
-	<div id='ver'>
-		<form action="">
-			ver:<input type="text" name="ver">
-		</form>
+	<form action="">
+		专题:
+		ver:<input type="text" name="ver">
+		ver:<input type="text" name="ver">
+		:<input type="text" name="ver" value>
+	</form>
 	</div>	
 	<div id='title'></div>
 	<div id='author'></div>
